# duckduckgo-mcp-server

./: .env.example  Dockerfile  README.md  pyproject.toml  server.py
src/duckduckgo/: fetcher.py  searcher.py
src/models/: models.py
src/utils/: rate_limiter.py
